--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Matter Example Apps</title>
     <meta
       name="description"
-      content="Easily allow users to install Matter example apps from the web."
+      content="Easily install Matter example apps from the web."
     />
     <meta name="viewport" content="width=device-width" />
     <meta name="color-scheme" content="dark light" />
@@ -101,8 +101,8 @@
               value="lighting-app-example/esp32-c3"
             />
             Lighting App for 
-            <a href="https://www.mouser.com/ProductDetail/356-ESP32-C3DEVKITM1"
-               >ESP32-C3-DevKitM-1</a
+            <a href="https://www.mouser.com/ProductDetail/Espressif-Systems/ESP32-S3-DevKitC-1-N8R8"
+               >ESP32-S3-DevKit</a
             >
             (<a
               href="https://github.com/project-chip/connectedhomeip/tree/master/examples/lighting-app/esp32"
@@ -118,62 +118,11 @@
               value="lighting-app-example/esp32-c3-m5stamp"
             />
             Lighting App for 
-            <a href="https://shop.m5stack.com/products/m5stamp-c3-mate-with-pin-headers?ref=NabuCasa"
-               >M5STAMP-C3</a
+            <a href="https://www.mouser.com/ProductDetail/Espressif-Systems/ESP32-H2-DevKitM-1-N4"
+               >ESP32-H2-DevKit</a
             >
             (<a
               href="https://github.com/project-chip/connectedhomeip/tree/master/examples/lighting-app/esp32"
-              >source</a
-            >)
-          </label>
-        </li>
-        <li>
-          <label>
-            <input
-              type="radio"
-              name="type"
-              value="lighting-app-example/esp32-atom-lite"
-            />
-            Lighting App for 
-            <a href="https://shop.m5stack.com/products/atom-lite-esp32-development-kit?ref=NabuCasa"
-               >ATOM Lite ESP32</a
-            >
-            (<a
-              href="https://github.com/project-chip/connectedhomeip/tree/master/examples/lighting-app/esp32"
-              >source</a
-            >)
-          </label>
-        </li>
-        <li>
-          <label>
-            <input
-              type="radio"
-              name="type"
-              value="light-switch-app-example/esp32-c3"
-            />
-            Light Switch App for
-            <a href="https://www.mouser.com/ProductDetail/356-ESP32-C3DEVKITM1"
-               >ESP32-C3-DevKitM-1</a
-            >
-	      (<a
-              href="https://github.com/project-chip/connectedhomeip/tree/master/examples/light-switch-app/esp32"
-              >source</a
-            >)
-          </label>
-        </li>
-        <li>
-          <label>
-            <input
-              type="radio"
-              name="type"
-              value="all-clusters-app-example/esp32-m5-basic-core"
-            />
-	    All Clusters App for
-            <a href="https://shop.m5stack.com/products/basic-core-iot-development-kit?ref=NabuCasa"
-               >M5Stack ESP32 Basic Core</a
-            >
-	      (<a
-              href="https://github.com/project-chip/connectedhomeip/tree/master/examples/all-clusters-app/esp32"
               >source</a
             >)
           </label>
